# red-mail

./: .coveragerc  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  versioneer.py
.github/ISSUE_TEMPLATE/: bug_report.md  docs-request.md  feature_request.md
.github/workflows/: docs.yml  main.yml  test_cov.yml  test_minimal.yml
ci/: file.html  test_send.py
docs/: conf.py  faq.rst  header.html  index.rst  references.rst  versions.rst
docs/extensions/: flask.rst  index.rst  logging.rst
docs/extra/: logging.rst
docs/tutorials/: attachments.rst  body_content.rst  client.rst  config.rst  cookbook.rst  example.rst  getting_started.rst  index.rst  jinja_support.rst  sending.rst  templating.rst  testing.rst
docs/tutorials/embed/: image.rst  index.rst  table.rst
redmail/: __init__.py  _version.py  log.py  utils.py
redmail/email/: __init__.py  address.py  attachment.py  body.py  envs.py  sender.py  utils.py
redmail/email/templates/html/table/: custom.html  modest.html  notebook-like.html
redmail/email/templates/text/table/: pandas.txt
redmail/models/: __init__.py  address.py  system.py
redmail/test/: conftest.py  pytest.ini  test_deprecated.py  test_models.py  test_utils.py
redmail/test/email/: test_attachments.py  test_body.py  test_cookbook.py  test_deprecated.py  test_headers.py  test_inline_media.py  test_send.py  test_structure.py  test_template.py
redmail/test/helpers/: convert.py  resources.py
redmail/test/log/: conftest.py  test_construct.py  test_handler.py  test_handler_multi.py
redmail/tests/: conftest.py  test_models.py
redmail/tests/email/: test_attachments.py  test_body.py  test_inline_media.py  test_template.py
redmail/tests/helpers/: convert.py  resources.py
requirements/: build.txt  coverage.txt  docs.txt
