[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["redmail"]

[project]
name = "redmail"
description = "Email sending library"
readme = "README.md"
license = {file="LICENSE"}
authors = [
    {name = "Mikael Koli", email = "koli.mikael@gmail.com"},
]
requires-python = ">=3.6"
classifiers = [
    "Topic :: Communications :: Email",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",

    "Intended Audience :: Developers",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Financial and Insurance Industry",
]
dynamic = ["version"]
dependencies = [
    'jinja2',
]

[tool.setuptools_scm]
write_to = "redmail/_version.py"
local_scheme = "no-local-version"

[project.urls]
Homepage = 'https://github.com/Miksus/red-mail'
Documentation = 'https://red-mail.readthedocs.io'
Funding = 'https://github.com/sponsors/Miksus'
Source = 'https://github.com/Miksus/red-mail'
Changelog = 'https://red-mail.readthedocs.io/en/stable/versions.html'

[project.optional-dependencies]
test = [
    'pytest',

    # Package requirements
    'jinja2',

    # Optional
    'pandas',
    'matplotlib',
    'Pillow',
    'openpyxl',
    'css_inline',
]
docs = [
    'sphinx >= 1.7.5',
    'pydata-sphinx-theme',
    'sphinx_material',
    'sphinx-copybutton',
    'sphinx_book_theme',
]

style = [
    'css_inline',
]

[tool.coverage.run]
source = ["redmail"]
branch = false
omit = [
    "test/*",
    "_version.py"
]
data_file = "cov_data/.coverage"

[tool.coverage.report]
omit = [
    "redmail/test/*",
    "redmail/_version.py",
    "redmail/__main__.py"
]
# Regexes for lines to exclude from consideration
exclude_lines = [
    "pragma: no cover",

    # Don't complain about abstract methods, they aren't run:
    '''@(abc\.)?abstractmethod''',

    # Ignore type checking imports
    "if TYPE_CHECKING",
]
ignore_errors = true

[tool.coverage.html]
directory = "htmlcov"